# data-analysis

./: .gitignore  README.md  requirements.txt
data-bounties/: README.md  view_pr.fish
hospital-price-transparency/: 2023-05-24-inpatient_exploratory_analysis.ipynb  440002.ipynb  README.md  (+8 more)
transparency-in-coverage/python/mrfutils/: README.md  example_cli.py  exceptions.py  helpers.py  idxutils.py  import.sh  import_toc.sh  mrfutils.py  pyproject.toml  setup.py
transparency-in-coverage/python/mrfutils/data/quest/: codes.csv
transparency-in-coverage/python/mrfutils/dolt_utils/: import_in_network.sh  import_toc.sh
transparency-in-coverage/python/mrfutils/examples/: example1.py  example2.py  example_cli.py  example_extract_in_network_from_toc.py
transparency-in-coverage/python/mrfutils/examples/dialysis_example/: dialysis.sh  process_dialysis.py  urls.txt
transparency-in-coverage/python/mrfutils/examples/example_data/: hospital_npi.csv
transparency-in-coverage/python/mrfutils/hpt/: 70_shoppables.csv  hospital_npis.csv
transparency-in-coverage/python/mrfutils/quest/: npis.csv
transparency-in-coverage/python/mrfutils/quest/week0/: codes_prelim.csv
transparency-in-coverage/python/mrfutils/schema/: schema.py  schema.sql
transparency-in-coverage/python/mrfutils/src/mrfutils/: __init__.py  converters.py  exceptions.py  flatteners.py  helpers.py  idxutils.py
transparency-in-coverage/python/mrfutils/src/mrfutils/schema/: schema.py
transparency-in-coverage/python/mrfutils/test/: test_file_no_references.json  test_file_out_of_order.json  tests.py
(+104 files in other folders)
