[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "mrfutils"
version = "0.0.1"
authors = [
  { name="Alec Stein", email="alec@dolthub.com" },
]
description = "A suite for handling insurance MRFs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tqdm==4.64.1",
    "ijson==3.1.4",
    "requests~=2.28.1",
    "aiohttp==3.8.3",
]

[project.urls]
"Homepage" = "https://github.com/dolthub/data-analysis/blob/main/transparency-in-coverage/python/mrfutils"
"Bug Tracker" = "https://github.com/dolthub/data-analysis/issues"